# rust_embedded_v8_example

./: Cargo.toml  README.md
example/: main.js  other.js
example/utils/: exclamation.js  strcomb.js
js/: draw.js  screen1.js
js/corelib/: global.d.ts  utils.d.ts  utils.js  widgets.d.ts  widgets.js
src/: core.rs  js.rs  js_widgets.rs  main.rs
src/core/: require.rs
src/js/: log.rs
src/js_widgets/: button.rs  macros.rs  rectangle.rs  text.rs
src/support/: mod.rs
