[package]
name = "rust_embedded_v8_example"
version = "0.1.0"
authors = ["Patrick Pissurno <contato@patrickpissurno.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty_v8 = "0.10.0"
conrod = { version = "0.55.0", features = ["glium", "winit"] }
find_folder="0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"