[package]
name = "rust_embedded_v8_example"
version = "0.1.0"
authors = ["Patrick Pissurno <contato@patrickpissurno.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty_v8 = "0.10.0"
conrod_core = { version = "0.70.0" }
conrod_winit = { version = "0.70.0" }
conrod_glium = { version = "0.70.0" }
glium = "*"
winit = "0.19"
find_folder="0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"